# robotek-1.2

./: .clang-format  .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build-package.yml  ci-image.yml  ci.yml  release.yml  security.yml
docker/: Dockerfile  Dockerfile.runtime  compose.yaml  runtime-entrypoint.sh
docs/: backlog.md  blocked-pr-demos.md  branch-protection.md  phase-2-3-status.md
docs/decisions/: 0001-tiered-ros-ci.md  0002-cpp-sast-scope.md
scripts/: build.sh  ci_gate.sh  clean.sh  generate_checksums.sh  generate_delivery_metadata.sh  hadolint.sh  install_dependencies.sh  integration_tests.sh  lint.sh  python_coverage.sh  security_gate.sh  security_sast.sh  simulation_tests.sh  unit_tests.sh  validate_config.py  validate_config.sh  validate_runtime_image.sh  validate_security_exceptions.py  validate_security_exceptions.sh
security/: README.md  exceptions.yaml  semgrep.yml
src/mock_robot_behavior/: package.xml  setup.cfg  setup.py
src/mock_robot_behavior/mock_robot_behavior/: __init__.py  mission_manager.py  mission_state_machine.py  mission_validation.py
src/mock_robot_behavior/test/: test_mission_state_machine.py
src/mock_robot_bringup/: CMakeLists.txt  package.xml
src/mock_robot_bringup/config/: control.yaml  mission.yaml  robot.yaml
src/mock_robot_bringup/launch/: full_simulation.launch.py
src/mock_robot_control/: CMakeLists.txt  package.xml
src/mock_robot_control/include/mock_robot_control/: safety_controller.hpp  velocity_limiter.hpp  waypoint_controller.hpp
src/mock_robot_control/src/: safety_controller.cpp  safety_controller_node.cpp  velocity_limiter.cpp  velocity_limiter_node.cpp  waypoint_controller.cpp  waypoint_controller_node.cpp
src/mock_robot_control/test/: test_safety_controller.cpp  test_velocity_limiter.cpp  test_waypoint_controller.cpp
src/mock_robot_description/: CMakeLists.txt  package.xml
src/mock_robot_description/launch/: description.launch.py
src/mock_robot_description/urdf/: mock_delivery_robot.urdf.xacro
src/mock_robot_gazebo/: CMakeLists.txt  package.xml
src/mock_robot_gazebo/config/: bridge.yaml
src/mock_robot_gazebo/launch/: simulation.launch.py
src/mock_robot_gazebo/worlds/: warehouse_world.sdf
src/mock_robot_interfaces/: CMakeLists.txt  package.xml
src/mock_robot_interfaces/action/: ExecuteDelivery.action
src/mock_robot_interfaces/msg/: MissionStatus.msg
src/mock_robot_system_tests/: package.xml  pytest.ini  setup.cfg  setup.py
src/mock_robot_system_tests/mock_robot_system_tests/: __init__.py
src/mock_robot_system_tests/test/: test_basic_movement.py  test_core_launch.py  test_delivery_mission.py  test_emergency_stop.py  test_simulation_topics.py
