<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mock_robot_system_tests</name>
  <version>0.1.0</version>
  <description>Integration and simulation tests for the mock delivery robot.</description>
  <maintainer email="developer@example.com">Mock Robot Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch_testing</exec_depend>
  <exec_depend>launch_testing_ros</exec_depend>
  <exec_depend>mock_robot_behavior</exec_depend>
  <exec_depend>mock_robot_bringup</exec_depend>
  <exec_depend>mock_robot_control</exec_depend>
  <exec_depend>mock_robot_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>geometry_msgs</test_depend>
  <test_depend>mock_robot_interfaces</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
